# svn-replicator

./: .gitignore  README.md  config.yml.default  pyproject.toml
src/: branchChange.py  commitMetadata.py  config_manager.py  defaults.py  helper.py  main.py  my_git.py  my_svn.py  pathChange.py  processor.py
